Fixed a spelling mistake

--- a/main.tex
+++ b/main.tex
@@ -422,7 +422,7 @@ As the procedure was conducted, the most notable observation is that the SR-30 g
 \end{figure}
 
 \begin{figure}[H]
-    \caption{This graph shows the relationship between the RPM of the SR-30 and it's Nozzel Exit Mach Number.}
+    \caption{This graph shows the relationship between the RPM of the SR-30 and it's Nozzle Exit Mach Number.}
     \label{fig:propulsion_rpmVSBraytonEff}
     \centering
     \resizebox{1\textwidth}{!}{%
